--- a/lib/bower.json
+++ b/lib/bower.json
@@ -14,9 +14,11 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
+    "firebase": "~2.3.1",
     "handlebars": "~3.0.3",
     "jquery": "~2.1.4",
     "lodash": "~3.10.1",
+    "q": "1.0.1",
     "require-handlebars-plugin": "~0.11.3",
     "requirejs": "~2.1.20"
   }
