--- a/lib/bower.json
+++ b/lib/bower.json
@@ -17,7 +17,8 @@
     "handlebars": "~3.0.3",
     "jquery": "~2.1.4",
     "lodash": "~3.10.1",
-    "require-handlebars-plugin": "~0.11.3",
-    "requirejs": "~2.1.20"
+    "require-handlebars-plugin": "~1.0.0",
+    "requirejs": "~2.1.20",
+    "firebase": "~2.3.1"
   }
 }
